--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>com.github.pagehelper</groupId>
     <artifactId>pagehelper</artifactId>
-    <version>5.2.0</version>
+    <version>xugu-5.2.0</version>
     <packaging>jar</packaging>
 
     <name>pagehelper 5</name>
